--- a/DynamicInterop.Tests/DynamicInterop.Tests.csproj
+++ b/DynamicInterop.Tests/DynamicInterop.Tests.csproj
@@ -5,11 +5,11 @@
     <EnableUnmanagedDebugging Condition=" '$(Configuration)' == 'Debug' ">true</EnableUnmanagedDebugging>
     <ProjectGuid>{CA934BF8-EC5B-49F5-8F52-25F3B11072E6}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Version>0.8.2</Version>
     <Description>DynamicInterop unit tests</Description>
     <Authors>Jean-Michel Perraud</Authors>
-    <PackageReleaseNotes>Migration to .NET Standard 2.0</PackageReleaseNotes>
+    <PackageReleaseNotes>Migration to .NET 7.0</PackageReleaseNotes>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
